--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -123,7 +123,7 @@ home_banner:
   style: fixed # static or fixed
   # Home banner image
   image: 
-    light: /images/wallhaven-wqery6-light.jpg # light mode
+    light: /images/wallhaven-wqery6-light.webp # light mode
     dark: /images/wallhaven-wqery6-dark.webp # dark mode
   # Home banner title
   title: Desire的博客
