--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -25,11 +25,11 @@ info:
 # Docs: https://redefine-docs.ohevan.com/basic/defaults
 defaults:
   # Favicon
-  favicon: /images/favicon.ico
+  favicon: fa-solid fa-gamepad
   # Site logo
-  logo: /images/favicon.ico
+  logo: fa-solid fa-gamepad
   # Site avatar
-  avatar: /images/avatar.jpg
+  avatar: http://sofqghj9f.hn-bkt.clouddn.com/avatar.png?e=1735662493&token=rSzAUCvxF5D_QBB6hhWXVyL0eQIKpTXH861BaX2c:Y6EsCNjBXa_m_7WO5SVEe2fAqjs=
 # IMAGE CONFIGURATION <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
 
 
@@ -123,7 +123,7 @@ home_banner:
   style: fixed # static or fixed
   # Home banner image
   image: 
-    light: /images/wallhaven-wqery6-light.webp # light mode
+    light: http://sofqghj9f.hn-bkt.clouddn.com/wallhaven-wqery6-light.webp?e=1735662374&token=rSzAUCvxF5D_QBB6hhWXVyL0eQIKpTXH861BaX2c:_nImp3gU4gjxOp9FCnGyrT4Yyn0= # light mode
     dark: /images/wallhaven-wqery6-dark.webp # dark mode
   # Home banner title
   title: Desire的博客
