--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -203,8 +203,8 @@ navbar:
     工具箱:
       path: https://www.423down.com
       icon: fa-solid fa-toolbox
-    镜像站点: 
-      path: https://desirenb.us.kg/
+    导航站点: 
+      path: https://hackno1.us.kg/
       icon: fa-solid fa-cloud
     # Archives: 
     #   path: /archives 
