--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -25,11 +25,11 @@ info:
 # Docs: https://redefine-docs.ohevan.com/basic/defaults
 defaults:
   # Favicon
-  favicon: /images/game.png
+  favicon: https://ooo.0x0.ooo/2025/04/02/O01Wot.png
   # Site logo
-  logo: /images/game.png
+  logo: https://ooo.0x0.ooo/2025/04/02/O01Wot.png
   # Site avatar
-  avatar: /images/avatar.png
+  avatar: https://ooo.0x0.ooo/2025/04/02/O01Wot.png
 # IMAGE CONFIGURATION <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< end
 
 
@@ -123,7 +123,7 @@ home_banner:
   style: fixed # static or fixed
   # Home banner image
   image: 
-    light: /images/wallhaven-wqery6-light.webp # light mode
+    light: https://ooo.0x0.ooo/2025/04/02/O01brx.jpg # light mode
     dark: /images/wallhaven-wqery6-dark.webp # dark mode
   # Home banner title
   title: Desire的博客
@@ -204,7 +204,7 @@ navbar:
       path: https://www.423down.com
       icon: fa-solid fa-toolbox
     导航站点: 
-      path: https://hackno1.us.kg/
+      path: https://www.desireblog.cn/
       icon: fa-solid fa-cloud
     # Archives: 
     #   path: /archives 
